--- a/index.html
+++ b/index.html
@@ -2,26 +2,17 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Visualizador HTML Supabase</title>
+  <title>Visualizador Fullscreen HTML</title>
   <style>
-    body, html {
-      margin: 0; padding: 0; height: 100%;
-      background: black; color: white;
-      display: flex; flex-direction: column; align-items: center; justify-content: center;
-      font-family: Arial, sans-serif;
-    }
-    #container {
-      width: 90vw; height: 90vh;
-      background: white; color: black;
-      overflow: auto;
-      border-radius: 8px;
-      padding: 1rem;
+    html, body, iframe {
+      margin: 0; padding: 0; height: 100%; width: 100%;
+      border: none;
+      overflow: hidden;
     }
   </style>
 </head>
 <body>
-  <h1>Visualizador HTML do Supabase Storage</h1>
-  <div id="container">Carregando...</div>
+  <iframe id="viewer" sandbox="allow-scripts allow-same-origin"></iframe>
 
   <script>
     const url = 'https://aubvkzfranufvkoevazg.supabase.co/storage/v1/object/public/public-html/index.html'
@@ -32,11 +23,12 @@
         return res.text()
       })
       .then(html => {
-        // Injeta o conteúdo do HTML no container
-        document.getElementById('container').innerHTML = html
+        const blob = new Blob([html], { type: 'text/html' })
+        const blobUrl = URL.createObjectURL(blob)
+        document.getElementById('viewer').src = blobUrl
       })
       .catch(err => {
-        document.getElementById('container').innerText = 'Erro: ' + err.message
+        document.body.innerHTML = `<pre>Erro: ${err.message}</pre>`
       })
   </script>
 </body>
