--- a/index.html
+++ b/index.html
@@ -2,34 +2,23 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <title>Visualizador Fullscreen HTML</title>
+  <title>Visualizador HTML</title>
   <style>
     html, body, iframe {
-      margin: 0; padding: 0; height: 100%; width: 100%;
-      border: none;
-      overflow: hidden;
+      margin: 0; padding: 0; height: 100%; width: 100%; border: none; overflow: hidden;
     }
   </style>
 </head>
 <body>
   <iframe id="viewer" sandbox="allow-scripts allow-same-origin"></iframe>
-
   <script>
-    const url = 'https://aubvkzfranufvkoevazg.supabase.co/storage/v1/object/public/public-html/index.html'
-
-    fetch(url)
-      .then(res => {
-        if (!res.ok) throw new Error('Falha ao carregar o arquivo')
-        return res.text()
-      })
+    fetch('https://aubvkzfranufvkoevazg.supabase.co/storage/v1/object/public/public-html/index.html')
+      .then(r => r.text())
       .then(html => {
-        const blob = new Blob([html], { type: 'text/html' })
-        const blobUrl = URL.createObjectURL(blob)
+        const blobUrl = URL.createObjectURL(new Blob([html], { type: 'text/html' }))
         document.getElementById('viewer').src = blobUrl
       })
-      .catch(err => {
-        document.body.innerHTML = `<pre>Erro: ${err.message}</pre>`
-      })
+      .catch(e => document.body.textContent = 'Erro: ' + e.message)
   </script>
 </body>
 </html>
